# MirrorMod

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  mirrorMod.yml
Loader/: CMakeLists.txt
Loader/src/: DInput8.cpp  DInput8.h  dllmain.cpp
Mirror/: CMakeLists.txt
Mirror/src/: Configuration.cpp  Configuration.h  DInputHook.cpp  DInputHook.h  DInputUtil.cpp  DInputUtil.h  DS2Sotfs.cpp  DS2Sotfs.h  DS3.cpp  DS3.h  DSR.cpp  DSR.h  DeepPointerDeserializer.cpp  DeepPointerDeserializer.h  EldenRing.cpp  EldenRing.h  Game.h  InlinePatchDeserializer.cpp  InlinePatchDeserializer.h  ModuleScanner.cpp  ModuleScanner.h  Sekiro.cpp  Sekiro.h  VTable.cpp  VTable.h  XInputHook.cpp  XInputHook.h  XInputUtil.cpp  XInputUtil.h  dllmain.cpp
docs/: Installation.md
shaders/DarkSoulsIII/src/: FXAA.hlsl
shaders/DarkSoulsIISotfs/src/: AA_WriteLum.hlsl  FeShader_Tex1Color.hlsl  FeShader_Tex1ColorMask.hlsl
shaders/DarkSoulsRemastered/src/: DSR_FragShader.hlsl  FRPG_Menu_Common.hlsl
shaders/EldenRing/src/: GXSimple_BlendUI_SDR2SDR_F.hlsl
shaders/Sekiro/src/: GXSimple_BlendUI_SDR2SDR_F.hlsl
